--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
-* {
+/* * {
     border: 1px solid blue
-}
+} */
+
+/* General Layout */
 body {
     display: flex;
     flex-direction: column;
@@ -8,6 +10,7 @@ body {
     background-color: #FBFBFD;
     margin: 0;
 }
+/* Nav Bar Styling */
 ul {
     list-style: none;
 }
@@ -34,6 +37,8 @@ ul {
     text-decoration: none;
     color:white;
 }
+
+/* Pop up Styling */
 .pop-up {
     background-color: #F5F5F7;
     font-size: 11px;
@@ -42,9 +47,14 @@ ul {
  a {
     text-decoration: none;
 }
+div a:visited {
+    color:#2997FE;
+}
 #pop-up {
     margin-top: 51px;
 }
+
+/* Large Ads Styling */
 .main-ads {
     max-width:100%;
     height:50%;
@@ -54,18 +64,24 @@ ul {
   /* top: 50%; */
   left: 50%;
   transform: translate(-46%, 81%);
-  font-size: 4em;
+  font-size: 4vw;
+  text-size-adjust: auto;
 }
 .white-font {
     color: white;
 }
-
+.purple-font {
+    color: #FEC2EB
+}
+.main-deals {
+    margin: 0.5em;
+}
 .main-deals > p {
     position: absolute;
   /* top: 50%; */
   left: 50%;
   transform: translate(-46%, 400%);
-  font-size: 2em;
+  font-size: 2vw;
 }
 
 .links {
@@ -73,22 +89,42 @@ ul {
   /* top: 50%; */
   left: 50%;
   transform: translate(-46%, 595%);
-  font-size: 2em;
+  font-size: 2vw;
 }
 
 .links > a {
     padding: 0 1.5em;
 }
-
+/* Mini Ads Styling */
 .container {
     display: flex;
     flex-wrap: wrap;
 }
 .container > div {
     width: 48%;
+    margin: 5px;
+}
+.mini-ads {
+    max-width: 100%;
+    height: auto;
 }
 
+aside {
+    position: absolute;
+    text-align: center;
+
+   
+}
+/* Fine Print Styling */
+footer {
+    background-color: #F5F5F7;
+}
+.tiny-print > li {
+    color: #838388;
+    font-size: small;
+    padding: .5em 0;
+}
 .tiny-print {
     padding: 0;
-    margin: 0 3em;
+    margin: 1em 10em;
 }
