--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ div a:visited {
 .container {
     display: flex;
     flex-wrap: wrap;
+    margin: auto;
 }
 .container > div {
     width: 48%;
@@ -108,16 +109,14 @@ div a:visited {
     max-width: 100%;
     height: auto;
 }
-
 aside {
     position: absolute;
     text-align: center;
-
-   
 }
 /* Fine Print Styling */
 footer {
     background-color: #F5F5F7;
+    
 }
 .tiny-print > li {
     color: #838388;
@@ -128,3 +127,19 @@ footer {
     padding: 0;
     margin: 1em 10em;
 }
+hr {
+    margin: 1em 10em;  
+}
+/* 
+Bottom Nav Styling */
+.bottom-nav {
+    margin: 1em 10em;  
+    display: flex;
+}
+
+.bottom-list > li{
+    color: #838388;
+    font-size: smaller;
+    padding: 5px 0;
+}
+
